# weed_guide_chatbot

./: .gitignore  README.md
backend/: chatbot.py  config.py  ingest.py  main.py  pyproject.toml  vector_store.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatWindow.jsx  InputBar.jsx  Message.jsx
